git friendly patch

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -32,13 +32,6 @@ LIBS ?=
 CFLAGS :=
 CXXFLAGS :=
 
-ifeq (1,$(modem_debug))
-    CFLAGS += -DMODEM_DEBUG
-endif
-ifeq (1,$(schdtime))
-    CFLAGS += -DSCHDTIME_DEBUG
-endif
-
 ifneq (, $(filter $(shell uname -s), FreeBSD OpenBSD NetBSD DragonFly))
     CFLAGS += -DTARGET_BSD
     undefine USE_UDEV
@@ -289,8 +282,10 @@ else ifneq (,$(findstring vero4k,$(platform)))
 else ifneq (,$(findstring win32,$(platform)))
     NOT_ARM := 1
     CFLAGS += -fno-builtin-sqrtf -funroll-loops -I /mingw64/include
-    LDFLAGS += -static-libgcc -static-libstdc++ -Wl,-subsystem,windows -L$(LOCAL_PATH)/../../core/deps/openlibm
-    LIBS := -lwininet -lopenlibm -lopengl32 -lwinmm -lgdi32 -lwsock32 -lws2_32 -ldsound -lcomctl32 -lcomdlg32 -lxinput -liphlpapi -Wl,-Bstatic -lgomp
+    LDFLAGS += -static-libgcc -static-libstdc++ -Wl,-subsystem,windows
+    LDFLAGS += -L$(LOCAL_PATH)/../../core/deps/openlibm
+    LIBS := -lopengl32 -lwinmm -lgdi32 -lwsock32 -lws2_32 -ldsound -lcomctl32 -lcomdlg32 -lxinput -liphlpapi -Wl,-Bstatic -lgomp
+    LIBS += -lwininet -lopenlibm
     PLATFORM_EXT := exe
     CC = gcc
     CXX = g++
