x64 rec: get rid of setjmp. standardize ngen_Rewrite/HandleException
move rewrite code from exception handlers to x86/x64 dynarecs
use same host context info on linux/win
x64: stack alignment issue in mem handlers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -645,7 +645,6 @@ target_sources(${PROJECT_NAME} PRIVATE
 if(NOT WIN32)
     target_sources(${PROJECT_NAME} PRIVATE
             core/linux/context.cpp
-            core/linux/context.h
             core/linux/posix_vmem.cpp)
 endif()
 
@@ -699,6 +698,8 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/oslib/audiobackend_sdl2.cpp
         core/oslib/audiostream.cpp
         core/oslib/audiostream.h
+        core/oslib/directory.h
+        core/oslib/host_context.h
         core/oslib/oslib.h)
 
 target_sources(${PROJECT_NAME} PRIVATE
