arm7 rec: lr wasn't updated in conditional bl
missing changes for previous arm64rec commit
more aica arm tests
wince vmem handler now uses direct ram access

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -978,5 +978,6 @@ if(BUILD_TESTING)
     target_sources(${PROJECT_NAME} PRIVATE
             tests/src/div32_test.cpp
             tests/src/test_stubs.cpp
-            tests/src/serialize_test.cpp)
+            tests/src/serialize_test.cpp
+            tests/src/AicaArmTest.cpp)
 endif()
