Fix compilation on FreeBSD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,44 +182,38 @@ endif()
 
 find_package(PkgConfig QUIET)
 if(PKG_CONFIG_FOUND AND NOT ANDROID AND NOT APPLE)
-    pkg_search_module(AO ao)
+    pkg_check_modules(AO IMPORTED_TARGET ao)
     if(AO_FOUND)
         target_compile_definitions(${PROJECT_NAME} PRIVATE USE_LIBAO)
-        target_include_directories(${PROJECT_NAME} PRIVATE ${AO_INCLUDE_DIRS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${AO_LIBRARIES})
+        target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::AO)
     endif()
 
-    pkg_search_module(FLAC flac)
+    pkg_check_modules(FLAC IMPORTED_TARGET flac)
     if(FLAC_FOUND)
-        target_include_directories(${PROJECT_NAME} PRIVATE ${FLAC_INCLUDE_DIRS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${FLAC_LIBRARIES})
+        target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::FLAC)
     endif()
 
-    pkg_search_module(LIBEVDEV libevdev)
+    pkg_check_modules(LIBEVDEV IMPORTED_TARGET libevdev)
     if(LIBEVDEV_FOUND)
         target_compile_definitions(${PROJECT_NAME} PRIVATE USE_EVDEV)
-        target_include_directories(${PROJECT_NAME} PRIVATE ${LIBEVDEV_INCLUDE_DIRS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBEVDEV_LIBRARIES})
+        target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::LIBEVDEV)
 
-        pkg_search_module(LIBUDEV libudev)
+        pkg_check_modules(LIBUDEV IMPORTED_TARGET libudev)
         if(LIBUDEV_FOUND)
             target_compile_definitions(${PROJECT_NAME} PRIVATE USE_UDEV)
-            target_include_directories(${PROJECT_NAME} PRIVATE ${LIBUDEV_INCLUDE_DIRS})
-            target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBUDEV_LIBRARIES})
+            target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::LIBUDEV)
         endif()
     endif()
 
-    pkg_search_module(LIBPULSE libpulse)
+    pkg_check_modules(LIBPULSE IMPORTED_TARGET libpulse)
     if(LIBPULSE_FOUND)
         target_compile_definitions(${PROJECT_NAME} PRIVATE USE_PULSEAUDIO)
-        target_include_directories(${PROJECT_NAME} PRIVATE ${LIBPULSE_INCLUDE_DIRS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBPULSE_LIBRARIES})
+        target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::LIBPULSE)
     endif()
 
-    pkg_search_module(LIBZIP libzip)
+    pkg_check_modules(LIBZIP IMPORTED_TARGET libzip)
     if(LIBZIP_FOUND)
-        target_include_directories(${PROJECT_NAME} PRIVATE ${LIBZIP_INCLUDE_DIRS})
-        target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBZIP_LIBRARIES})
+        target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::LIBZIP)
     endif()
 
     if(ENABLE_OPROFILE)
