New option system
Fix per-game settings (Issue #115)
Automatic load/save state (Issue #173)
Reload Naomi/AW BIOS after per-game settings are loaded to allow
per-game BIOS region. (Issue #96)
Restrict Soul Reaver widescreen cheat to the EU version (Issue #188)
Disable UI elements for overridden settings
Clean up/simplify legacy Naomi ROM loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -450,7 +450,9 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/cfg/cfg.h
         core/cfg/cl.cpp
         core/cfg/ini.cpp
-        core/cfg/ini.h)
+        core/cfg/ini.h
+        core/cfg/option.cpp
+        core/cfg/option.h)
 
 target_sources(${PROJECT_NAME} PRIVATE
         core/hw/aica/aica.cpp
