x86 msvc build fix. Build 32bit SDL. Force renderer type at startup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,11 +127,15 @@ if(WIN32)
 	execute_process(COMMAND git apply -p1 ${CMAKE_CURRENT_SOURCE_DIR}/core/deps/patches/SDL.patch
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/core/deps/SDL) 
 	file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL")
+	if(MSVC)
+		set(SDL_CMAKE_ARCH_ARG -A ${CMAKE_GENERATOR_PLATFORM})
+	endif()
 	execute_process(COMMAND ${CMAKE_COMMAND} 
 		"-DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL" 
+		-DLIBC=ON
 		-DBUILD_SHARED_LIBS=OFF
 		-G "${CMAKE_GENERATOR}"
-		$<$<BOOL:MSVC>:-A ${CMAKE_GENERATOR_PLATFORM}>
+		${SDL_CMAKE_ARCH_ARG}
 		"${CMAKE_CURRENT_SOURCE_DIR}/core/deps/SDL" 
     	WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL")
 	execute_process(COMMAND ${CMAKE_COMMAND} --build "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL" --config Release --target install)
@@ -142,7 +146,7 @@ if(MINGW)
 endif()
 
 if(NOT ANDROID)
-    find_package(SDL2 QUIET HINTS "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL")
+    find_package(SDL2 HINTS "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL")
 endif()
 if(SDL2_FOUND)
     target_compile_definitions(${PROJECT_NAME} PRIVATE USE_SDL USE_SDL_AUDIO)
