cmake fixes. makefile clean up. load gles3 driver with sdl
add FindSDL2.cmake and don't provide wrong hint
cmake: option to disable vulkan
don't use/link with egl if using sdl
remove ARM_HARDFP and use standard __ARM_PCS_VFP #def
hide texture upscaling options if no openmp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ option(USE_GLES "Use GLES[3] API" OFF)
 option(USE_GLES2 "Use GLES2 API" OFF)
 option(USE_HOST_LIBZIP "Use host libzip" ON)
 option(USE_OPENMP "Use OpenMP if available" ON)
+option(USE_VULKAN "Build with Vulkan support" ON)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shell/cmake")
 
@@ -148,8 +149,10 @@ if(MINGW)
 	target_link_libraries(${PROJECT_NAME} PRIVATE "-static-libgcc -static-libstdc++")
 endif()
 
-if(NOT ANDROID)
+if(WIN32)
     find_package(SDL2 HINTS "${CMAKE_CURRENT_BINARY_DIR}/core/deps/SDL/cmake")
+elseif(NOT ANDROID)
+    find_package(SDL2)
 endif()
 if(SDL2_FOUND)
     target_compile_definitions(${PROJECT_NAME} PRIVATE USE_SDL USE_SDL_AUDIO)
@@ -228,7 +231,7 @@ if(PKG_CONFIG_FOUND AND NOT ANDROID AND NOT APPLE)
         target_link_libraries(${PROJECT_NAME} PRIVATE opagent)
     endif()
     
-    find_package(miniupnpc)
+    find_package(Miniupnpc)
     if (MINIUPNP_FOUND)
 		target_include_directories(${PROJECT_NAME} PRIVATE ${MINIUPNP_INCLUDE_DIRS})
 		target_link_libraries(${PROJECT_NAME} PRIVATE ${MINIUPNP_LIBRARIES})
@@ -238,10 +241,12 @@ endif()
 if(UNIX AND NOT APPLE AND NOT ANDROID)
 	if(USE_GLES2)
 		target_compile_definitions(${PROJECT_NAME} PRIVATE GLES GLES2)
-		target_link_libraries(${PROJECT_NAME} PRIVATE GLESv2 EGL)
+		target_link_libraries(${PROJECT_NAME} PRIVATE GLESv2)
 	elseif(USE_GLES)
 		target_compile_definitions(${PROJECT_NAME} PRIVATE GLES GLES3)
-		target_link_libraries(${PROJECT_NAME} PRIVATE EGL)
+		if(NOT SDL2_FOUND)
+			target_link_libraries(${PROJECT_NAME} PRIVATE EGL)
+		endif()
 	else()
 	    set(OpenGL_GL_PREFERENCE LEGACY)
 	    find_package(OpenGL REQUIRED)
@@ -795,7 +800,7 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/rend/TexCache.cpp
         core/rend/TexCache.h)
 
-if(NOT (APPLE OR ANDROID OR USE_GLES))
+if(NOT (APPLE OR ANDROID OR USE_GLES OR USE_GLES2))
     target_sources(${PROJECT_NAME} PRIVATE
     	core/rend/gl4/abuffer.cpp
     	core/rend/gl4/gl4.h
@@ -804,7 +809,7 @@ if(NOT (APPLE OR ANDROID OR USE_GLES))
     	core/rend/gl4/gltex.cpp)
 endif()
 
-if(NOT APPLE)
+if(USE_VULKAN AND NOT APPLE)
     if(ANDROID)
         set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_ANDROID_KHR)
     elseif(X11_FOUND)
