--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -342,7 +342,7 @@ ICON_DIR ?= ${PREFIX}/share/pixmaps
 ifdef USE_SDL
 	ifdef FOR_WINDOWS
 	    CXXFLAGS += -D USE_SDL
-	    INCS += -ISDL/include
+	    INCS += -I$(RZDCY_SRC_DIR)/deps/SDL/include
 	else
 	    CXXFLAGS += `sdl2-config --cflags` -D USE_SDL
 	    LIBS += `sdl2-config --libs`
