cheats: support for .CHT cheat files
Issue #167
gui: no need to save background in opengl, use RenderLastFrame instead
disable cheats when online

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -790,6 +790,7 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/rend/gui.h
         core/rend/gui_android.cpp
         core/rend/gui_android.h
+        core/rend/gui_cheats.cpp
         core/rend/gui_util.cpp
         core/rend/gui_util.h
         core/rend/mainui.cpp
