build fix. default Delay Frame Swapping to true

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -877,6 +877,14 @@ if(WIN32)
 		core/rend/dx9/dxcontext.cpp
 		core/rend/dx9/imgui_impl_dx9.h
 		core/rend/dx9/imgui_impl_dx9.cpp)
+	if(NOT MINGW)
+		target_include_directories(${PROJECT_NAME} PRIVATE "$ENV{DXSDK_DIR}/Include")
+		if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+			target_link_directories(${PROJECT_NAME} PRIVATE "$ENV{DXSDK_DIR}/Lib/x64")
+		else()
+			target_link_directories(${PROJECT_NAME} PRIVATE "$ENV{DXSDK_DIR}/Lib/x86")
+		endif()
+	endif()
 	target_link_libraries(${PROJECT_NAME} PRIVATE d3d9 d3dx9)
 endif()
 
