--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -32,8 +32,7 @@ jobs:
         if: matrix.config.os == 'ubuntu-latest'
 
       - name: Set up build environment (windows-latest)
-        run: echo "DXSDK_DIR=$HOME/ccache/" >> $GITHUB_ENV
-        shell: bash
+        run: echo "DXSDK_DIR=${Env:HOMEDRIVE}${Env:HOMEPATH}\ccache\" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
         if: matrix.config.os == 'windows-latest' && matrix.config.name != 'x86_64-w64-mingw32'
 
       - uses: actions/cache@v2
